2009-02-20  Murray Cumming  <murrayc@murrayc.com>

	* configure.in:
	* glom/libglom/connectionpool_backends/postgres_self.cc: Use the 
	postgres executable name instead of the deprecated postmaster 
	executable. Everything probably has that now.
	Bug # 525108
 
2009-02-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/utlity_widgets/datawidget.cc: Constructor: Show the Open button, 
	(but not Find) for related fields that are primary keys, so we can 
	navigate to that record.
	* glom/mode_data/box_data_details.cc: 
	on_flowtable_field_open_details_requested(): Navigate to the 
	appropriate record in the appropriate table for this type of Open 
	button.
	Bug #571975

	* glom/base_db.cc: fill_full_field_details(): Avoid crashes.

2009-02-20  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.[h|cc]: 
	get_field_used_in_relationship_to_one(): Make this take a 
	LayoutItem_Field instead of just a field name.
	* glom/utlity_widgets/datawidget.cc: Constructor: adapt, so we add 
	Open and Find buttons for related fields too when appropriate.
	* glom/base_db.cc: Adapt to API change.

2009-02-18  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/data_structure/field.cc: from_file_format(): Adjusted 
	for a libgda API change in gda_string_to_binary().

2009-02-18  Armin Burgmeier  <armin@openismus.com>

	* glom/libglom/data_structure/field.cc (set_glom_type): Reset the
	default value if the Glom type is changed. The old default value
	probably doesn't make sense for the new type. This fixes a warning
	when changing a field's type from text to numerical.
	(set_default_value): Verify that the new default value is compatible
	with the field's glom type.
	(set_field_info): Verify that the default value of the new field info
	is compatible with the field's glom type.

	* glom/mode_design/fields/box_db_table_definition.cc
	(get_field_definition): When changing the field info's GType, make