@@ -28,6 +28,8 @@
 namespace Glom
 {
 
+/** A class to get user/group information for a database.
+ */
 class Privs : public GlomPostgres
 {
 public:
@@ -41,6 +43,20 @@ public:
   static type_vecStrings get_groups_of_user(const Glib::ustring& user);
   static bool get_user_is_in_group(const Glib::ustring& user, const Glib::ustring& group);
   static Privileges get_current_privs(const Glib::ustring& table_name);
+
+protected:
+  static bool on_privs_privileges_cache_timeout(const Glib::ustring& table_name);
+
+  typedef std::map<Glib::ustring, Privileges> type_map_privileges;
+
+  //A map of table names to cached privileges: 
+  static type_map_privileges m_privileges_cache;
+
+  // Store the cache for a few seconds in case it 
+  // is immediately requested again, to avoid 
+  // introspecting again, which is slow. 
+  typedef std::map<Glib::ustring, sigc::connection> type_map_cache_timeouts;
+  static type_map_cache_timeouts m_map_cache_timeouts;
 };
 
 } //namespace Glom
